@@ -1,4 +1,8 @@
 
+2018-03-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* termio.c (cob_display): added missing handling of cob_unix_lf
+
 2018-03-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* screenio.c (cob_convert_key): define ALT_DEL, ALT_HOME, ALT_END,
